--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "ts-jest": "^23.10.5",
     "ts-loader": "^5.3.0",
     "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.16.0",
+    "tslint-react": "^3.6.0",
     "typescript": "^3.1.6"
   },
   "dependencies": {},
