--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "react-native-svg": "^8.0.8"
   },
   "dependencies": {
-    "@emotion/native": "^9.2.9",
+    "@emotion/core": "^10.0.4",
+    "@emotion/native": "^10.0.4",
+    "emotion-theming": "^10.0.4",
     "lodash": "^4.17.11",
     "react-native-size-matters": "^0.1.4",
     "recompose": "^0.30.0"
