chore: tweak lint settings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "strict": true,
     "lib": ["esnext"],
-    "jsx": "react"
+    "jsx": "react",
+    "target": "es5"
   }
 }
