--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@peoplesmomentum/native-ui",
-  "version": "0.1.0",
-  "description": "UI components for building momentum react native apps",
+  "name": "nativeista",
+  "version": "0.0.0-development",
+  "description": "A rebass-inspired set of UI primitives for react native apps",
   "main": "index.js",
   "author": "Chris Devereux",
   "license": "MIT",
@@ -29,6 +29,7 @@
     "react-dom": "^16.6.3",
     "react-native-web": "^0.9.8",
     "react-svg-loader": "^2.1.0",
+    "semantic-release": "^15.13.3",
     "ts-jest": "^23.10.5",
     "ts-loader": "^5.3.0",
     "tslint": "^5.11.0",
@@ -49,12 +50,14 @@
     "recompose": "^0.30.0"
   },
   "scripts": {
+    "typecheck": "tsc --noemit",
     "storybook": "start-storybook -p 6001",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "semantic-release": "semantic-release"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
+      "pre-commit": "tsc --noemit && lint-staged",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
@@ -79,5 +82,9 @@
     "extends": [
       "@commitlint/config-conventional"
     ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chrisdevereux/nativeista.git"
   }
 }
