--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,11 @@
     "strict": true,
     "lib": ["esnext"],
     "jsx": "react",
-    "target": "es5"
-  }
+    "target": "es5",
+    "declaration": true,
+    "declarationMap": true,
+    "skipLibCheck": true,
+    "rootDir": "./src"
+  },
+  "exclude": ["node_modules"]
 }
