fix: wrap emotion theming
wrap all usage of emotion to avoid version conflicts when user installs
own version of emotion

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "typecheck": "tsc --noemit",
     "storybook": "start-storybook -p 6001",
     "build-storybook": "build-storybook",
+    "build": "tsc --outdir .",
     "semantic-release": "semantic-release"
   },
   "husky": {
