--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   "dependencies": {
     "@emotion/core": "^10.0.4",
     "@emotion/native": "^10.0.4",
+    "@types/chroma-js": "^1.4.1",
+    "chroma-js": "^2.0.2",
     "emotion-theming": "^10.0.4",
     "lodash": "^4.17.11",
     "react-native-size-matters": "^0.1.4",
