chore: remove unused variables

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "lib": ["esnext"],
     "jsx": "react",
     "target": "es2015",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "declaration": true,
     "sourceMap": true,
     "skipLibCheck": true,
